--- a/Tech Shop/Login.html
+++ b/Tech Shop/Login.html
@@ -10,7 +10,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="index.js"></script>
 </head>
-<body>
+    <body>
         <div id = "form">
             <h4>Create Account</h4>
             <form action="/Home" method="POST">
@@ -23,10 +23,9 @@
                     <input type="password" class="form-control" placeholder="Enter Password">
                 </div>
                 
-                <input type="submit" class = "btn btn-primary" name ="Login" value="Login">
+                <input type="submit" class = "btn btn-dark" name ="Login" value="Login">
                 <p>Don't have accout <a href="Register.html">Create one</a> </p>
             </form>
         </div>
-    </div>    
-</body>
+    </body>
 </html>
