--- a/Tech Shop/Register.html
+++ b/Tech Shop/Register.html
@@ -7,35 +7,56 @@
     <title>Login</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
    <link rel = "stylesheet" href="index.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
-        <div id = "form">
+        <div id = "registerform">
             <h4>Create Account</h4>
-                <form action="/Home" method="POST">
+                <form id = "form" action="/Home.html" method="POST">
                     <div class="form-group">
                         <label for = "firstname"> First Name:</label>
-                        <input type="text" class="form-control">
-                    </div>
+                        <input type="text" class="form-control" id="firstname">
+                        <div class="firstname">
+                            <i class="fa fa-check-circle"></i>
+                            <i class="fa fa-exclamation-circle"></i>
+                            <small>Error Message</small>
+                        </div>
+                    </div
+                    >
                     <div class="form-group">
                         <label for = "lastname"> Last Name:</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="lastname">
+                       
+                            <i class="fa fa-check-circle"></i>
+                            <i class="fa fa-exclamation-circle"></i>
+                            <small>Error Message</small>
+                        
                     </div>
                     <div class="form-group">
                         <label for = "email"> Email address:</label>
-                        <input type="email" class="form-control">
+                        <input type="email" class="form-control" id="email">
+                        <i class="fa fa-check-circle"></i>
+                        <i class="fa fa-exclamation-circle"></i>
+                        <small>Error Message</small>
                     </div>
                     <div class="form-group">
                         <label for = "pwd"> Create Password:</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" id="pwd">
+                        <i class="fa fa-check-circle"></i>
+                        <i class="fa fa-exclamation-circle"></i>
+                        <small>Error Message</small>
                     </div>
                     <div class="form-group">
                         <label for = "pwd"> Confirm Password:</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" id="cpwd">
+                        <i class="fa fa-check-circle"></i>
+                        <i class="fa fa-exclamation-circle"></i>
+                        <small>Error Message</small>
                     </div>
-                    <input type="submit" class = "btn btn-primary" name ="signin" value="Create Account">
+                    <input type="submit" onsubmit="checkInput()" class = "btn btn-dark" name ="signin" value="Create Account">
                 </form>
         </div>
-</body>
+    </body>
 </html>
